fix:update resource

--- a/consumerTwo/pom.xml
+++ b/consumerTwo/pom.xml
@@ -12,6 +12,7 @@
     <groupId>com.coderpwh</groupId>
     <artifactId>consumerTwo</artifactId>
 
+
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -38,6 +39,11 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -53,11 +59,6 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
-        </dependency>
-        <!--hystrix的引用 -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
