--- a/consumerTwo/src/main/resources/bootstrap.yml
+++ b/consumerTwo/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: '@spring.profiles.active@'
   application:
-    name: consumer
+    name: consumerTwo
   cloud:
     nacos:
       discovery:
